--- a/src/sass/_projects.sass
+++ b/src/sass/_projects.sass
@@ -71,6 +71,9 @@
                 img
                     width: 1.875em
                     margin-right: 0.625em
+                
+                img:last-child
+                    margin-right: 0 !important
 
             .projectButtons
                 width: 90%
@@ -87,16 +90,14 @@
                     margin-right: 1.25em
                     margin-top: 1.25em
                     
-
                     &:hover
                         background: $black
                         box-shadow: 0 0.3125em 0.3125em 0 $baseShadow
                         margin-top: 0.9375em
                         margin-bottom: 0.3125em
-                        
-
-            .oneItem
-                margin-right: 0 !important
+                
+                a:last-child
+                    margin-right: 0 !important
 
 /** ############################################################################################################# **/
 /** ############################################################################################################# **/
@@ -173,6 +174,9 @@
                 img
                     width: 1.875em
                     margin-right: 0.625em
+                
+                img:last-child
+                    margin-right: 0 !important
 
             .projectButtons
                 width: 90%
@@ -190,8 +194,9 @@
                     margin-top: 1.25em
                     box-shadow: 0 0.3125em 0.3125em 0 $baseShadow
                     margin-right: 1.25em
+
+                a:last-child
+                    margin-right: 0 !important
             
-            .oneItem
-                width: max-content !important
                 
 
